syntax = "proto3";

option csharp_namespace = "UbudKusCoin.Services";


service AccountService {
  rpc GetAll(AllAccountRequest) returns (AllAccountResponse);
}

message AllAccountRequest{
  int32 page_number = 1;
  int32 result_per_page = 2; 
}

message AllAccountResponse {
  repeated Account accounts = 1;
}

message Account {
  int64 Id = 1;
  string address = 2;
	double balance = 3;
  int32 txn_count = 4;
  int64 last_update = 5;
}
